# compare_messages

./: Cargo.toml  README.md
proto/: message.proto
src/: avro.rs  axum_json.rs  grpc.rs  lib.rs  main.rs  plots.rs  result.rs  zmq_json.rs
