[package]
name = "compare_messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.3"
reqwest = { version = "0.11", features = ["json"] }
fake = { version = "2.4", features=['derive']}
log = "0.4"
env_logger = "0.9"
futures = "0.3"
tonic = "0.6"
prost = "0.9"
avro-rs = "0.13"
once_cell = "1.7"
zeromq = "0.3"

[build-dependencies]
tonic-build = "0.6"
